# SLOERSPACE-DEV

./: CONTRIBUTING.md  README.md  SECURITY.md  package-lock.json  package.json  tsconfig.tsbuildinfo
.github/workflows/: ci.yml  release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/app/: globals.css  page.tsx
src/components/: AgentsPage.tsx  CommandPalette.tsx  ErrorBoundary.tsx  HomeScreen.tsx  KanbanBoard.tsx  LoginPage.tsx  NavigationMenu.tsx  PromptsPage.tsx  SettingsPage.tsx  StatusBar.tsx  SwarmDashboard.tsx  SwarmLaunch.tsx  TerminalView.tsx  TitleBar.tsx  Toast.tsx  UpgradeModal.tsx  WorkspaceWizard.tsx
src/lib/: desktop.ts
src/store/: appStore.ts
