[package]
name = "sloerspace-dev"
version = "0.1.0"
description = "SloerSpace Dev - Agentic Development Environment"
authors = ["SloerSpace"]
edition = "2021"

[lib]
name = "sloerspace_dev_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "time", "fs", "sync"] }
